fix: ignore RUSTSEC-2024-0436 (unmaintained paste crate)

--- a/deny.toml
+++ b/deny.toml
@@ -9,7 +9,7 @@ db-urls = ["https://github.com/rustsec/advisory-db"]
 yanked = "deny"
 ignore = [
     # Add advisory IDs to ignore here if needed
-    # "RUSTSEC-2024-XXXX",
+    "RUSTSEC-2024-0436", # paste crate is unmaintained (transitive dep via accesskit)
 ]
 
 [licenses]
