--- a/deny.toml
+++ b/deny.toml
@@ -7,6 +7,7 @@ version = 2
 db-path = "~/.cargo/advisory-db"
 db-urls = ["https://github.com/rustsec/advisory-db"]
 yanked = "deny"
+unmaintained = "warn"
 ignore = [
     # Add advisory IDs to ignore here if needed
     "RUSTSEC-2024-0436", # paste crate is unmaintained (transitive dep via accesskit)
