--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -189,7 +189,7 @@ jobs:
         run: cargo install cargo-audit --locked
 
       - name: Run security audit
-        run: cargo audit
+        run: cargo audit --ignore RUSTSEC-2024-0384
 
   # Dependency check - validate licenses and outdated deps
   dependency-check:
