--- a/deny.toml
+++ b/deny.toml
@@ -10,8 +10,8 @@ db-urls = ["https://github.com/rustsec/advisory-db"]
 yanked = "deny"
 ignore = [
     # Add advisory IDs to ignore here if needed
-    "RUSTSEC-2024-0436", # paste crate is unmaintained (transitive dep via accesskit)
-    "RUSTSEC-2024-0384", # instant crate is unmaintained (transitive dep via iced/libcosmic)
+    "RUSTSEC-2024-0436", # paste: unmaintained (transitive via accesskit)
+    "RUSTSEC-2024-0384", # instant: unmaintained (transitive via iced/libcosmic)
 ]
 
 [licenses]
